# chama-savings-app

./: .env  .gitignore  Pipfile  README.md  pyproject.toml  render.yaml  requirements.txt  settings.py  wsgi.py
client/: .env  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.js  App.jsx  App.tsx  api.tsx  global.css  index.css  routes.js  types.tsx
client/src/api/: api.tsx  apiClient.js  auth.js  axios.tsx  contributionApi.tsx  groupApi.tsx  notifications.js  userApi.ts  userApi.tsx
client/src/auth/: Login.tsx  Logout.tsx  Register.tsx
client/src/components/: AdminProtectedRoute.tsx  Footer.tsx  GroupDetails.jsx  Hero.tsx  InvestmentList.jsx  LandingPage.jsx  Navbar.jsx  Navbar.tsx  PaymentForm.jsx  ProtectedRoute.jsx  ProtectedRoute.tsx  Sidebar.tsx
client/src/context/: AuthContext.js  AuthContext.jsx  (+4 more)
sc_backup/: Pipfile  README.md
sc_backup/felixcorrection/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
server/: .env  Pipfile  __init__.py  admin.py  app.py  config.py  database.py  extensions.py  requirements.txt  run.py  seed.py  views.py
server/app/: __init__.py  config.py  errors.py  extensions.py  requirements.txt
server/instance/: chama.db
server/models/: __init__.py  contribution.py  group.py  investment.py  loan.py  loan_repayment.py  member.py  user.py
server/routes/: __init__py  admin.py  auth.py  contribution_routes.py  group.py  member_routes.py  user.py
server/tests/: conftest.py  test_models.py  test_notification.py
(+168 files in other folders)
