[tool.poetry]
name = "chama-savings-app"
version = "0.1.0"
description = "Chama Savings Application"
authors = ["dkerubo <damariskerry@gmail.com>"]
packages = [
    { include = "chama_savings_app" },
    { include = "manage.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
django = "^4.2"
psycopg2-binary = "^2.9.9"  # For PostgreSQL support
whitenoise = "^6.5.0"       # For static files

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"